# text-replacer

./: Cargo.toml  README.md
src/: bytes_replacer.rs  case_matcher.rs  lib.rs  utf8_replacer.rs  utils.rs
